Fix a handful of Sonar and other issues